objects/Vertical_Per_Head__c.object
<CustomObject>
    <fields>
        <fullName>Industry__c</fullName>
        <description>To capture List of Industries in Accounts</description>
        <label>Industry</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vertical_Per_Head_Austria__c</fullName>
        <description>Field to hold Vertical Per Head value against each industry for Austria</description>
        <label>Austria</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vertical_Per_Head_Belgium__c</fullName>
        <description>Field to hold Vertical Per Head value against each industry for Belgium</description>
        <label>Belgium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vertical_Per_Head_Denmark__c</fullName>
        <description>Field to hold Vertical Per Head value against each industry for Denmark</description>
        <label>Denmark</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vertical_Per_Head_Finland__c</fullName>
        <description>Field to hold Vertical Per Head value against each industry for Finland</description>
        <label>Finland</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vertical_Per_Head_France__c</fullName>
        <description>Field to hold Vertical Per Head value against each industry for France</description>
        <label>France</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vertical_Per_Head_Germany__c</fullName>
        <description>Field to hold Vertical Per Head value against each industry for Germany</description>
        <label>Germany</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vertical_Per_Head_Greece__c</fullName>
        <description>Field to hold Vertical Per Head value against each industry for Greece</description>
        <label>Greece</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vertical_Per_Head_Ireland__c</fullName>
        <description>Field to hold Vertical Per Head value against each industry for Ireland</description>
        <label>Ireland</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vertical_Per_Head_Israel__c</fullName>
        <description>Field to hold Vertical Per Head value against each industry for Israel</description>
        <label>Israel</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vertical_Per_Head_Italy__c</fullName>
        <description>Field to hold Vertical Per Head value against each industry for Italy</description>
        <label>Italy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vertical_Per_Head_Netherlands__c</fullName>
        <description>Field to hold Vertical Per Head value against each industry for Netherlands</description>
        <label>Netherlands</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vertical_Per_Head_Norway__c</fullName>
        <description>Field to hold Vertical Per Head value against each industry for Norway</description>
        <label>Norway</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vertical_Per_Head_Portugal__c</fullName>
        <description>Field to hold Vertical Per Head value against each industry for Portugal</description>
        <label>Portugal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vertical_Per_Head_Spain__c</fullName>
        <description>Field to hold Vertical Per Head value against each industry for Spain</description>
        <label>Spain</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vertical_Per_Head_Sweden__c</fullName>
        <description>Field to hold Vertical Per Head value against each industry for Sweden</description>
        <label>Sweden</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vertical_Per_Head_Switzerland__c</fullName>
        <description>Field to hold Vertical Per Head value against each industry for Switzerland</description>
        <label>Switzerland</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vertical_Per_Head_United_Kingdom__c</fullName>
        <description>Field to hold Vertical Per Head value against each industry for United Kingdom</description>
        <label>United Kingdom</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <description>Object to hold Vertical Dollar Per Head Lookup Data</description>
    <label>zzVertical Per Head</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Vertical per Head</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vertical Per Head</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>